tests/vertical-slice/accept/assert_eq.hew
fn main() -> i64 {
    let actual: i64 = 2 + 2;
    assert_eq(actual, 4);
    0
}
