tests/vertical-slice/reject/gen_capture_whole_value_tail.hew
fn main() {
    let items: Vec<i64> = Vec::new();
    let _g = gen {
        items
    };
}
